03/02/2004 Bob Rossi <bob@brasko.net>

    * inc/kui.h: move comments around

03/02/2004 Bob Rossi <bob@brasko.net>

    * src/kui.c: I shouldn't have commented out the struct's data
	members. It didn't compile.

03/02/2004 Bob Rossi <bob@brasko.net>

    * src/kui.c: Complying to doxygen standards

03/01/2004 Bob Rossi <bob@brasko.net>

    * inc/kui.h: second specification for libkui
    * src/kui.c: a stubbed implementation that allows linking
    * src/kui_driver.c: Doesn't test anything yet.
	* src/Makefiel.am: update to build correctly
	* src/Makefiel.in: Add for people with automake

02/26/2004 Bob Rossi <bob@brasko.net>

    * inc: Added include directory.
	* src: Added source directory.
	* src/Makefile.am: Add initial automake file to build libkui and
	kui_driver
	* src/kui.c: Initial kui file that will make up libkui
	* src/kui_driver.c: A standalone application that can test the
	functionality of libkui.
	* inc/kui.h: Initial specification for libkui
	* Makefile.in: Add for people with automake
	* src/Makefile.in: ditto